ChangeLog for RQL
=================

2006-10-27  --  0.8.0
    * fix grammar for negative integer :/
    * simplify generated subtree for IN(onechildren)
    * stcheck is now doing full annotation and additional constant variable
      rewriting
    * do not include yapps anymore
    * removed broken C parser
    * fixes to follow yams api changes
    * editextensions fixes

2006-10-08  --  0.7.2
    * add missing as_string method on groups and sorts
    * detect that queries like "Any C where C suivi_par P, P eid %(x)s ORDERBY N"
      are incorrect (N isn't defined)
	
2006-09-22  --  0.7.1
    * fix as_string bugs
    * fix a bug in stcheck to detect bad queries when aggregat/transform
      functions are used
	
2006-09-05  --  0.7.0
    * new method on variable to get the name of relations where it's used
    * new function into utils to register known registered procedures
    * fixed grammar to allow "_" into function name

2006-06-08  --  0.6.0
    * new add method on statement

2006-05-21  --  0.5.2
    * fixed syntax tree copy, just call stmt.copy() to have a
      full deep copy
    * support for substitute on uid relation in the type analyzer
      (this implies to give the kwargs dictionary of the query to the 
      analyzer)

	
2006-03-28  --  0.4.2
    * fixed a bug when a variable is related to itself
    * allow numbers in variable and entity types
    * C parser (disabled by default)

2006-02-10  --  0.4.1
    * fix set_distinct so that previous distinct attribute is correctly undoed
      if necessary
    * remove a false assertion in remove_selected
    * remove unnecessary OR from the tree when used with a symetric relation
	
2006-01-23  --  0.4.0
    * fix Constant's type when NOW is used
    * allow function in ORDERBY expression
    * refactor some edit extensions


2005-07-26  --  0.3.1
    * close #9629, "Any E WHERE P is Project, P eid E"  foire
    * fix bug with IN() used in update queries


2005-07-06  --  0.3.0