@@ -153,12 +153,12 @@ class Select(Statement):
         self.offset = 0
 
     def set_limit(self, limit):
-        if not instance(limit, (int, long)) or limit <= 0:
+        if not isinstance(limit, (int, long)) or limit <= 0:
             raise BadRQLQuery('bad limit %s' % limit)
         self.limit = limit
 
     def set_offset(self, offset):
-        if not instance(offset, (int, long)) or offset <= 0:
+        if not isinstance(offset, (int, long)) or offset <= 0:
             raise BadRQLQuery('bad offset %s' % offset)
         self.offset = offset
         
