@@ -1,6 +1,11 @@
 ChangeLog for RQL
 =================
 
+ --
+    * fix a NameError in set_offset/set_limit and regenerate parser to
+      use those methods
+    * stinfo['references'] is now a list since order is important
+	
 2006-10-27  --  0.8.0
     * fix grammar for negative integer :/
     * simplify generated subtree for IN(onechildren)
